tests/errors/cSigUnknownOs.milo
// @error: unknown OS 'win32'
// The OS list uses target.ts's names, not process.platform's — 'win32' would be a
// silently disabled guard rather than a scoped one, which is the failure this whole
// annotation exists to avoid.
@cSig("unistd.h", "int close(int)", "darwin,win32")
extern fn close(fd: i32): i32

fn main() {
    print(close(-1))
}
